--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script> 
     $(function(){
-      $("test").load("https://cdn.rawgit.com/i5heu/html-example-code-lorem/master/text-representations-with-article-tag.html"); 
+      $("test").load("https://rawgit.com/i5heu/html-example-code-lorem/master/text-representations-with-article-tag.html"); 
     });
     </script> 
 <test></test>
