--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script> 
     $(function(){
-      $("test").load("https://rawgit.com/i5heu/html-example-code-lorem/master/text-representations-with-article-tag.html"); 
+      $("test").load("https://cdn.rawgit.com/i5heu/html-example-code-lorem/7c79bd0f28ce450c422e85c1fff9e052fe69af63/text-representation.html"); 
     });
     </script> 
 <test></test>
